EXTRA_DIST = \
	COPYING \
	ChangeLog \
	NEWS \
	README \
	VERSION \
	po/AUTHORS \
	po/ChangeLog

SUBDIRS = po src 

#BUILT_SOURCES = gt_config.h

#$(OBJECTS): $(BUILT_SOURCES)

#ACLOCAL_AMFLAGS = -I m4

#gt_config.h: pre_config.h
#	$(sedpath) 's/\#define PACKAGE/\#define GT_PACKAGE/g' pre_config.h > $@

#cp -f po/Makefile po/.tmp-Makefile
#sed -e "s#localedir = .*#localedir = $(GAIM_DATADIR)/locale#g" < po/.tmp-Makefile > po/Makefile
#rm -f po/.tmp-Makefile

